# openmdx

./: .gitignore  README.md  index.html
.github/workflows/: main.yml
api/: README.md  auth.py  database.py  dotenv.tpl  mockup_agent.py  pyproject.toml  requirements.txt  server.py  start_worker.py  worker.py
api/agents/: pydantic_ai_team.py  small_team.py  smolagent_team.py
assets/: browser-B7HbPJYu.js  browser-BAmQukTu.js  browser-BceEqciK.js  browser-CG8tuXoi.js  browser-DicRHCym.js  browser-hwFu4lXY.js  index-B096W07N.css  index-BGuykO0i.js  index-BSSqVyuY.js  index-BVAcuFJW.js  index-CXHLpoqu.css  index-DNmneSSu.js  index-DSeI4bBh.css  index-JS8OIKx8.css  index-Uim-sZ04.js  index-WlPyeDZ0.js  index-b1EJuaCV.css
web/: components.d.ts  dotenv.tpl  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  Backend.ts  main.ts  router.ts  theme.ts
web/src/assets/: style.css
web/src/components/: CaseInputArea.vue  CiteTag.vue  Footer.vue  HelloWorld.vue  LeftSidebar.vue  TopMenu.vue
web/src/components/backgrounds/: Aurora.vue  Threads.vue
web/src/directives/: v-cite.ts
web/src/models/: ClinicalCase.ts  Samples.ts
web/src/pages/: Analyze.vue  CaseHistory.vue  Home.vue  Login.vue  Signup.vue  UserProfile.vue
web/src/stores/: CaseStore.ts  DataStore.ts  UserStore.ts
web/src/utils/: supabase.ts  toolbox.ts
